fix(tab): prevent close button shift on active tab
Updated .tab--active margin-bottom from -1px to -2px to keep the close button aligned.

--- a/src/components/editor-view/Tab.css
+++ b/src/components/editor-view/Tab.css
@@ -12,7 +12,7 @@
 }
 
 .tab--active {
-  margin-bottom: -1px;
+  margin-bottom: -2px;
   padding-bottom: 2px;
   color: #fff;
   background: #1f1f1f;
